Added some IntelliJ notes.